--- a/.lh/.vscode/settings.json.json
+++ b/.lh/.vscode/settings.json.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 1,
+            "activePatchIndex": 2,
             "patches": [
                 {
                     "date": 1759907328725,
@@ -12,6 +12,10 @@
                 {
                     "date": 1760760308383,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -0,0 +1,3 @@\n+{\n+    \"references.preferredLocation\": \"view\"\n+}\n\\ No newline at end of file\n"
+                },
+                {
+                    "date": 1761912085697,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,6 +1,3 @@\n {\n     \"references.preferredLocation\": \"view\"\n-}\n-{\n-    \"references.preferredLocation\": \"view\"\n }\n\\ No newline at end of file\n"
                 }
             ],
             "date": 1759907328725,
