--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@types/node": "^16.18.126",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19.1.13",
+    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "dayjs": "^1.11.18",
     "qrcode": "^1.5.4",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
