--- a/.lh/src/components/CMSAppBar.tsx.json
+++ b/.lh/src/components/CMSAppBar.tsx.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 39,
+            "activePatchIndex": 40,
             "patches": [
                 {
                     "date": 1757828417755,
@@ -164,6 +164,10 @@
                 {
                     "date": 1762429498897,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -213,18 +213,31 @@\n `;\n \n const UserInfo = styled.div`\n   display: flex;\n-  align-items: center;\n-  gap: 8px;\n+  flex-direction: column;\n+  align-items: flex-end;\n+  gap: 2px;\n   font-size: ${AppTextStyles.body2.fontSize};\n   color: ${AppColors.onSurface};\n `;\n \n+const UserNameSection = styled.div`\n+  display: flex;\n+  align-items: center;\n+  gap: 8px;\n+`;\n+\n const UserName = styled.span`\n   font-weight: 500;\n `;\n \n+const AppVersion = styled.span`\n+  font-size: 11px;\n+  color: ${AppColors.onSurface}80;\n+  font-weight: 400;\n+`;\n+\n const LogoutButton = styled.button`\n   padding: 6px 12px;\n   border: 1px solid ${AppColors.borderLight};\n   border-radius: 6px;\n@@ -576,10 +589,13 @@\n         </LeftSection>\n \n         <RightSection>\n           <UserInfo>\n-            <UserName>{adminName}</UserName>\n-            <span>님</span>\n+            <UserNameSection>\n+              <UserName>{adminName}</UserName>\n+              <span>님</span>\n+            </UserNameSection>\n+            <AppVersion>v1.0.1</AppVersion>\n           </UserInfo>\n           \n           <LogoutButton onClick={handleLogout}>\n             로그아웃\n"
+                },
+                {
+                    "date": 1763378065659,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -593,9 +593,9 @@\n             <UserNameSection>\n               <UserName>{adminName}</UserName>\n               <span>님</span>\n             </UserNameSection>\n-            <AppVersion>v1.0.1</AppVersion>\n+            <AppVersion>v1.0.2</AppVersion>\n           </UserInfo>\n           \n           <LogoutButton onClick={handleLogout}>\n             로그아웃\n"
                 }
             ],
             "date": 1757828417755,
