--- a/.lh/src/components/CMSAppBar.tsx.json
+++ b/.lh/src/components/CMSAppBar.tsx.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 40,
+            "activePatchIndex": 42,
             "patches": [
                 {
                     "date": 1757828417755,
@@ -168,6 +168,14 @@
                 {
                     "date": 1763378065659,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -593,9 +593,9 @@\n             <UserNameSection>\n               <UserName>{adminName}</UserName>\n               <span>님</span>\n             </UserNameSection>\n-            <AppVersion>v1.0.1</AppVersion>\n+            <AppVersion>v1.0.2</AppVersion>\n           </UserInfo>\n           \n           <LogoutButton onClick={handleLogout}>\n             로그아웃\n"
+                },
+                {
+                    "date": 1763462824978,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -46,9 +46,8 @@\n     id: 'program',\n     title: '프로그램',\n     subMenus: [\n       { id: 'program-management', title: '프로그램 관리', path: '/cms/program/management' },\n-      { id: 'product-management', title: '상품 관리', path: '/cms/program/product' },\n     ],\n   },\n   {\n     id: 'terms',\n"
+                },
+                {
+                    "date": 1763467924916,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -592,9 +592,9 @@\n             <UserNameSection>\n               <UserName>{adminName}</UserName>\n               <span>님</span>\n             </UserNameSection>\n-            <AppVersion>v1.0.2</AppVersion>\n+            <AppVersion>v1.0.3</AppVersion>\n           </UserInfo>\n           \n           <LogoutButton onClick={handleLogout}>\n             로그아웃\n"
                 }
             ],
             "date": 1757828417755,
