--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/styled-components": "^5.1.34",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
